<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:gravity="bottom"
    sothree:umanoShadowHeight="0dp"
    sothree:umanoPanelHeight="50dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dumen"
    sothree:umanoOverlay="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paperbackground">

        <android.support.v7.widget.RecyclerView
            android:padding="30dp"
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:dividerHeight="0dp"
            android:overScrollMode="never"
            android:divider="@android:color/transparent"
            android:listSelector="@android:color/transparent"/>

        <View
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="0.88"
        android:clickable="true"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_marginTop="46dp"
            android:background="@drawable/shadow"
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:layout_below="@id/shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background3">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:paddingTop="60dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:baselineAligned="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:textAlignment="center"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:text="@string/nof_settings"
                            android:id="@+id/nof_settings"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                        <Button
                            android:textAlignment="center"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:text="@string/change_lang"
                            android:id="@+id/change_lang"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                    </LinearLayout>

                    <LinearLayout
                        android:baselineAligned="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:textAlignment="center"
                            android:layout_row="1"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:id="@+id/switch_music"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                        <Button
                            android:textAlignment="center"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:id="@+id/switch_sound"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                    </LinearLayout>

                    <Button
                        android:textAlignment="center"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_columnSpan="2"
                        android:layout_margin="10dp"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:typeface="monospace"
                        android:text="@string/rate_game"
                        android:id="@+id/rate_game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector" />

                    <LinearLayout
                        android:baselineAligned="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:textAlignment="center"
                            android:layout_row="3"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:text="@string/credits"
                            android:id="@+id/credits"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                        <Button
                            android:textAlignment="center"
                            android:layout_row="3"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            android:typeface="monospace"
                            android:text="@string/other"
                            android:id="@+id/other"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_selector" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <ImageView
            android:layout_marginTop="50dp"
            android:src="@drawable/divider"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@id/dumen"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_dmen"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </RelativeLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
